--- a/app/views/partial/head.jade
+++ b/app/views/partial/head.jade
@@ -4,7 +4,8 @@ head
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     title= title
 
-    link(rel="stylesheet", href="/vendor/bootstrap/css/bootstrap.css")
+    //link(rel="stylesheet", href="/vendor/bootstrap/css/bootstrap.css")
+    link(rel="stylesheet", href="/vendor/bootstrap-theme/flatly.css")
     link(rel="stylesheet", href="/vendor/font-awesome/css/font-awesome.min.css")
     link(rel="stylesheet", href="/asset/css/style.css")
 
