Implement files upload (WIP)

--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -1,6 +1,6 @@
 !!! 5
 html
-    include ../partial/head
+    include ../partial/backendHead
     body
         .wrapper
             include ../partial/backendHeader
