--- a/app/views/partial/foot.jade
+++ b/app/views/partial/foot.jade
@@ -6,3 +6,5 @@ script(src="/vendor/jquery/jquery-2.0.3.min.js")
 //<![endif]
 
 script(src="/vendor/bootstrap/js/bootstrap.min.js")
+
+block footerScript
