--- a/public/asset/css/backend.scss
+++ b/public/asset/css/backend.scss
@@ -1,6 +1,13 @@
 // Variables
 $footerHeight: 80px;
 
+.page-header {
+  margin-top: 20px;
+}
+.tab-content {
+  margin-top: 20px;
+}
+
 // Sticky footer
 html, body {
   height: 100%;
@@ -28,4 +35,15 @@ footer {
 
 .main-content {
   margin: 15px 0;
+}
+
+.tb-uploader {
+  border: 2px dashed #c0c0c0;
+  width: 100%;
+  height: 100%;
+
+  .tb-uploader-help {
+    margin: 0 auto;
+    text-align: center;
+  }
 }
