--- a/app/views/template/add.jade
+++ b/app/views/template/add.jade
@@ -66,7 +66,10 @@ block content
                         div.btn.btn-default.fileinput-button
                             span Upload thumbnail
                             input#thumbnailUploader(type="file", name="thumbnail", data-url="/admin/thumb")
-                        div.tb-thumbnail
+                        div(style="margin-top: 20px;")
+                            div.progress.progress-striped.active.hide
+                                div#thumbProgress.progress-bar.progress-bar-success(style="width: 100%;")
+                        div.tb-tmpl-thumb
                         input(type="hidden", name="thumbs")
 
                 hr
@@ -177,10 +180,14 @@ block footerScript
                 dataType: 'json',
                 start: function(e) {
                     $('#saveButton').attr('disabled', 'disabled');
+                    // Show the thumbnail generating progress
+                    $('#thumbProgress').parent().removeClass('hide');
                 },
                 done: function(e, data) {
-                    console.log(data);
+                    $('#thumbProgress').parent().addClass('hide');
                     $('#saveButton').removeAttr('disabled');
+                    $('input[name="thumbs"]').val(JSON.stringify(data.result.files));
+                    $('.tb-tmpl-thumb').html('').append($('<img/>').attr('src', '#{thumbPrefixUrl}' + data.result.files.original));
                 }
             });
 
