--- a/public/asset/css/backend.css
+++ b/public/asset/css/backend.css
@@ -28,8 +28,11 @@ footer {
 .main-content {
   margin: 15px 0; }
 
-.tb-thumbnail {
+.tb-tmpl-thumb {
   border: 2px dashed #c0c0c0;
   margin-top: 20px;
   width: 240px;
   height: 180px; }
+  .tb-tmpl-thumb img {
+    width: 100%;
+    height: 100%; }
