--- a/public/asset/css/backend.scss
+++ b/public/asset/css/backend.scss
@@ -37,9 +37,14 @@ footer {
   margin: 15px 0;
 }
 
-.tb-thumbnail {
+.tb-tmpl-thumb {
   border: 2px dashed #c0c0c0;
   margin-top: 20px;
   width: 240px;
   height: 180px;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
