--- a/app/views/auth/signin.jade
+++ b/app/views/auth/signin.jade
@@ -2,6 +2,8 @@ extends ../layouts/default
 
 block content
     div.col-lg-4.col-lg-offset-4
+        include ../partial/flash
+
         div.panel.panel-default
             div.panel-heading
                 h3.panel-title Sign in
