--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -4,7 +4,7 @@ html
         meta(charset="utf-8")
         meta(http-equiv="Content-type", content="text/html;charset=UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
-        title= title
+        title #{title}
 
         link(rel="stylesheet", href="/vendor/bootstrap-theme/css/flatly.css")
         link(rel="stylesheet", href="/vendor/font-awesome/css/font-awesome.min.css")
